--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -9,3 +9,12 @@
 .six:hover, .six:focus, .six:active {
 	background-color:#b7ebea;
 }
+.grey{
+	font-size:12px;
+	color:#9E9886;
+}
+
+.drawer_p{
+	margin:10px;
+	font-size:14px;
+}
