--- a/sass/var/_settings.scss
+++ b/sass/var/_settings.scss
@@ -135,10 +135,10 @@ $navcontain-height: 80px; // makes space at the top of a document for when using
 // Drawers & Modals
 $modal-overlay-color: rgba(0, 0, 0, 0.8);
 $modal-window-color: $white;
-$drawer-background-color: #3e4144;
+$drawer-background-color: #ddd;
 $drawer-inner-shadow-x-offset: 0;
-$drawer-inner-shadow-y-offset: 2px;
-$drawer-inner-shadow-blur: 5px;
+$drawer-inner-shadow-y-offset: 0px;
+$drawer-inner-shadow-blur: 0px;
 $drawer-inner-shadow-color: #313436;
 
 // Tables
