--- a/playground/styles.css
+++ b/playground/styles.css
@@ -27,7 +27,7 @@ body, html, .contents{
 
 .contents{
 	padding-top: 50px;
-	padding-bottom: 35px;
+	padding-bottom: 50px;
 	overflow:scroll;
 }
 
@@ -40,6 +40,8 @@ body, html, .contents{
 	transition:background-color 0.3s ease-out;
 	height:100px;
 	border-bottom:1px solid #efefef;
+	margin:0;
+	width:100%;
 }
 
 .contents .row:hover{
@@ -53,7 +55,9 @@ body, html, .contents{
 }
 
 .contents .image{
+	float:left;
 	padding:0;
+	position:relative;
 }
 
 .contents .image > img{
@@ -63,7 +67,7 @@ body, html, .contents{
 }
 
 .contents .info{
-	padding:0 10px;
+	padding:0 80px;
 }
 
 .contents .name{
@@ -76,6 +80,7 @@ body, html, .contents{
 }
 
 .contents .price{
+	float:right;
 	font-size:40px;
 	padding:0;
 	line-height: 70px;
