finished up hover effect and information section in web work items

--- a/cosmicmeow/src/App.scss
+++ b/cosmicmeow/src/App.scss
@@ -1,3 +1,48 @@
+$white: #fbf0de;
+$pink: #e9bbb9;
+
+@mixin gradientButton() {
+	$button_color1: #bca4d1;
+	$button_color2: #f8c8ad;
+	background: $button_color1;
+	background: -moz-linear-gradient(
+		to right,
+		$button_color2 0%,
+		$button_color1 100%
+	);
+	background: -webkit-linear-gradient(
+		to right,
+		$button_color2 0%,
+		$button_color1 100%
+	);
+	background: linear-gradient(
+		to right,
+		$button_color2 0%,
+		$button_color1 100%
+	);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9bbb9', endColorstr='#bdb2c3',GradientType=0 );
+}
+
+@mixin gradient($direction) {
+	background: rgb(233, 187, 185);
+	background: -moz-linear-gradient(
+		$direction,
+		rgba(233, 187, 185, 1) 50%,
+		rgba(189, 178, 195, 1) 100%
+	);
+	background: -webkit-linear-gradient(
+		$direction,
+		rgba(233, 187, 185, 1) 50%,
+		rgba(189, 178, 195, 1) 100%
+	);
+	background: linear-gradient(
+		$direction,
+		rgba(233, 187, 185, 1) 50%,
+		rgba(189, 178, 195, 1) 100%
+	);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9bbb9', endColorstr='#bdb2c3',GradientType=0 );
+}
+
 .hero-banner {
 	min-height: 0;
 	display: block;
@@ -200,11 +245,11 @@
 	justify-content: space-around;
 }
 .item-container {
-	border: 10px solid #fbf0de;
+	// border: 10px solid #fbf0de;
 	background-color: #fbf0de;
-	border-radius: 10px;
+	// border-radius: 10px;
 	width: 400px;
-	min-height: 250px;
+	min-height: 320px;
 	margin: 15px;
 	position: relative;
 	overflow: hidden;
@@ -212,100 +257,89 @@
 	-moz-box-shadow: 4px 4px 26px 0px rgba(0, 0, 0, 0.1);
 	box-shadow: 4px 4px 26px 0px rgba(0, 0, 0, 0.1);
 	transition: all 0.3s ease-out;
+	border: 1px solid #fff6ea;
+
 	.item-image {
 		position: absolute;
 		width: 100%;
-		height: 100%;
-		border-radius: 4px;
+		height: 250px;
 		background-size: cover;
 		background-position: bottom;
 		background-repeat: no-repeat;
 		pointer-events: none;
 		-webkit-transition: -webkit-filter 0.2s ease-out;
 		transition: filter 0.2s ease-out;
-		&::after {
-			content: '';
-			width: calc(100% - 10px);
-			height: calc(100% - 10px);
-			position: absolute;
-			top: 4px;
-			left: 4px;
-			border: 1px dotted #fff6ea;
-			border-radius: 3px;
-		}
-	}
-	.item-action {
-		position: absolute;
-		background-repeat: no-repeat;
-		cursor: pointer;
-		transition: all 0.15s ease-out;
-		&.item-more {
-			right: 12px;
-			bottom: 20px;
-			width: 64px;
-			height: 64px;
-			border-radius: 32px;
-			background-color: rgba(#8392b3, 0.6);
-			background-position: center 9px;
-			background-size: 32px;
-			background-image: url('./assets/work_assets/bun_more.png');
-			&:hover {
-				background-color: rgba(#8392b3, 0.9);
-				transform: translateY(-2px);
-			}
-		}
-		&.item-less {
-			right: 20px;
-			top: 22px;
-			width: 20px;
-			height: 15px;
-			background-size: contain;
-			background-image: url('./assets/work_assets/bun_less.png');
-			&:hover {
-				transform: translateY(2px);
-			}
-		}
 	}
 	.item-details {
 		position: absolute;
 		width: 100%;
 		height: 100%;
-		background-color: #fbf0de;
-		transform: translateY(100%);
-		transition: transform ease-out 0.3s;
+		background-color: #4e4341;
+		transform: translateY(250px);
+		transition: all ease-out 0.3s;
 		color: #bbb2c2;
 		font-size: 15px;
 		cursor: default;
 		text-align: left;
 		pointer-events: auto;
+		display: flex;
+		flex-direction: column;
 
-		.item-details-contents {
-			width: calc(100% - 10px);
-			height: calc(100% - 10px);
+		p {
+			margin-top: 0;
+		}
+
+		&:hover {
+			background-color: #423836;
+		}
+
+		&::after {
+			content: ' ';
 			position: absolute;
-			top: 4px;
-			left: 4px;
-			padding: 15px 20px;
-			overflow-y: scroll;
-			overflow-x: hidden;
+			height: 50px;
+			width: 50px;
+			right: 30px;
+			top: -38px;
+			background-image: url('./assets/work_assets/bun_hmm.png');
+			background-repeat: no-repeat;
+			background-size: contain;
+			opacity: 1;
+			transition: opacity ease-out 0.2s;
+		}
+
+		.item-details-collapse {
+			position: absolute;
+			top: 20px;
+			right: 20px;
+			width: 15px;
+			height: 15px;
+			background-image: url('./assets/work_assets/toggle_less.png');
+			background-repeat: no-repeat;
+			background-size: cover;
+			opacity: 0;
+		}
+
+		.item-details-inner {
+			padding: 20px;
+			padding-top: 0;
+			flex: 1;
+			display: flex;
+			flex-direction: column;
+			justify-content: space-around;
 		}
 
 		.item-name {
 			font-family: 'Jua', Helvetica, Arial, sans-serif;
 			font-size: 24px;
-			margin-bottom: 16px;
-			color: #8392b3;
+			color: $white;
+			margin: 0;
 			position: relative;
-			padding-right: 22px;
-			// &:before {
-			//   content: "";
-			//   position: absolute;
-			//   left: 0;
-			//   top: 34px;
-			//   width: 50px;
-			//   height: 1px;
-			//   border-bottom: 1px dotted #BBB2C2;
-			// }
+			cursor: pointer;
+			padding: 20px;
+		}
+
+		.item-tools {
+			color: $pink;
 		}
 
 		.item-label {
@@ -313,88 +347,69 @@
 			display: inline;
 		}
 
-		&::before {
-			content: '';
-			width: calc(100% - 10px);
-			height: calc(100% - 10px);
-			position: absolute;
-			top: 4px;
-			left: 4px;
-			border: 1px dotted #8392b3;
-			border-radius: 3px;
-			opacity: 0;
-			transition: opacity ease-out 0.2s 0s;
-		}
+		.item-link {
+			display: inline-flex;
+			justify-content: center;
+			align-items: center;
+			width: 120px;
+			height: 40px;
+			border-radius: 20px;
+			color: $white;
+			text-decoration: none;
+			cursor: pointer;
+			font-size: 1.2em;
+			@include gradientButton();
+			transition: all ease-out 0.15s;
 
-		&::after {
-			content: ' ';
-			position: absolute;
-			height: 15px;
-			width: 100%;
-			left: 0;
-			top: -14px;
-			background-image: url('/src/assets/img/header_assets/item_border_pattern.png');
-			background-repeat: repeat-x;
-			background-position: top;
-			background-size: 20px;
+			&:hover {
+				width: 125px;
+			}
 		}
 	}
+
 	&.active {
-		// height: 460px;
-		// width: 100%;
 		.item-image {
 			-webkit-filter: blur(10px);
 			filter: blur(10px);
 		}
 		.item-details {
 			transform: translateY(0px);
-			opacity: 0.95;
-			&::before {
-				transition: opacity ease-out 0.3s 0.2s;
-				opacity: 1;
+			&::after {
+				opacity: 0;
+				transition-delay: 0s;
 			}
 		}
-		.item-more {
-			opacity: 0;
+		.item-details-collapse {
+			opacity: 0.6;
 		}
 	}
 }
 
 @media only screen and (max-width: 499px) {
 	.item-container {
-		height: 320px;
+		min-height: 320px;
 		.item-image {
-			background-size: contain;
-			background-position: top;
+			height: 260px;
+			background-size: cover;
+			background-position: center;
 		}
-		.item-action.item-more {
-			background-color: rgba(#8392b3, 0.8);
-			left: 50%;
-			margin-left: -32px;
-			right: initial;
+		.item-details {
+			transform: translateY(260px);
+			.item-name {
+				padding: 15px;
+				padding-bottom: 10px;
+			}
+			.item-details-inner {
+				padding: 15px;
+				padding-top: 0;
+			}
 		}
 	}
 }
 
 #web-works {
 	position: relative;
-	background: rgb(233, 187, 185);
-	background: -moz-linear-gradient(
-		top,
-		rgba(233, 187, 185, 1) 50%,
-		rgba(189, 178, 195, 1) 100%
-	);
-	background: -webkit-linear-gradient(
-		top,
-		rgba(233, 187, 185, 1) 50%,
-		rgba(189, 178, 195, 1) 100%
-	);
-	background: linear-gradient(
-		to bottom,
-		rgba(233, 187, 185, 1) 50%,
-		rgba(189, 178, 195, 1) 100%
-	);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e9bbb9', endColorstr='#bdb2c3',GradientType=0 );
+	@include gradient(to bottom);
 	&::before {
 		content: '';
 		position: absolute;
